# covid-hacking-data

./: README.md  covid_19_data_rev.csv  perc_chg_stacked.csv  pop data 2019.csv  population-figures-by-country.csv  pull_covid_data.py  pyproject.toml
tableau/: Covid-19 Data old.twb  Covid-19 Data.twb  Covid-19 Data.twbx
tests/: test_covid_tracking.py
