[tool.poetry]
name = "covid-tracking"
version = "0.1.0"
description = ""
authors = ["Mateo"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
pendulum = "^2.1.0"
plotly = "^4.5.4"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
