[tool.poetry]
name = "covid-hacking-data"
version = "0.1.0"
description = ""
authors = ["Mateo"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
plotly = "^4.5.4"
datetime = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
